# template_project

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt
